[project]
name = "comfy_meh"
description = "Advanced merging methods."
version = "1.0.0"
license = "LICENSE"
dependencies = ["sd-meh==0.9.5", "torch", "tensordict", "pyyaml"]

[project.urls]
Repository = "https://github.com/s1dlx/comfy_meh"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfy_meh"
Icon = ""
